# autoparallelizer

./: CMakeLists.txt  TODO.md  main.cpp  parallelized.c  run_fft.sh  run_foo.sh  run_hello.sh  run_sums.sh  sums
antlr4-cpp-runtime/: CMakeLists.txt
antlr4-cpp-runtime/runtime/: CMakeLists.txt
antlr4-gen/: C.g4  CBaseListener.h  CBaseVisitor.h  CLexer.h  CListener.h  CParser.cpp  CParser.h  CVisitor.h
listeners/: listeners.hpp
parallelizer/: parallelizer.cpp  parallelizer.hpp
parallelizer/naivepar/semantic-concepts/: statblock.cpp
parallelizer/semantic-concepts/: concepts.hpp  function.cpp  program.cpp  statblock.cpp
tests/: demo.c  fft.c  foo.c  hello_world.c  sums  sums.c
util/: util.cpp  util.hpp
visitors/: callgraph_visitor.cpp  function_visitor.cpp  global_visitor.cpp  variable_visitor.cpp  visitors.hpp
